# drake-ai

./: .gitignore  README.md  drake-ai.py  drake.ipynb  pyproject.toml  requirements.txt  setup.sh  so_vits_svc_4_0_inference.ipynb  so_vits_svc_4_0_inference_original.ipynb  voice_conversion_cli.py
notebook/: drake.ipynb  final-clean.ipynb  so_vits_svc_4_0_inference_original.ipynb
src/: download_utils.py  drakeai.py  ui.py  utils.py
