[tool.poetry]
name = "Drake AI"
version = "0.1.0"
description = "A command-line interface for voice conversion for drake ai."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
rich = "^10.12.0"

[tool.poetry.dev-dependencies]
pytest

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
