[tool.poetry]
name = "Drake AI"
version = "0.1.0"
description = "A command-line interface for voice conversion for drake ai."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <3.9"
typer = "^0.4.0"
rich = "^10.12.0"
praat-parselmouth = "*"
ipywidgets = "*"
huggingface_hub = "*"
pip = "23.0.1"
fairseq = "0.12.2"
numpy = "1.21"
protobuf = "3.9.2"
tensorflow = "2.11.0"
py7zr = "^0.20.5"
gdown = "^4.7.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
